# secret-paste

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MARKETING.md  POLISH_PROMPT.md  README.md  ROADMAP.md  SETUP.md  _common.py  install.ps1  pyproject.toml  requirements.txt  secret-get.py  secret-list.py  secret-paste.py  secret-revoke.py  secret_get_cli.py  secret_list_cli.py  secret_paste_cli.py  secret_paste_core.py  secret_paste_i18n.py  secret_paste_install_skill.py  secret_revoke_cli.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
docs/: one-time-sharing.md
locales/: de.json  en.json
secret_paste_skill/: secret-paste.md
tests/: conftest.py  test_config.py  test_dpapi_mocked.py  test_gui_dialog.py  test_i18n.py  test_mirror.py  test_safe_name.py  test_secret_get_cli.py  test_secret_paste_cli.py  test_set_remote.py  test_tmp_cleanup.py  test_ttl.py  test_vault_backend.py
