[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-paste"
version = "0.1.0"
description = "Give AI agents secrets without leaking them into your chat transcript."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Moritz Voigt" },
]
keywords = [
    "secret",
    "credential",
    "vault",
    "ai-agent",
    "claude",
    "cursor",
    "dpapi",
    "keyring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "pywin32; sys_platform == 'win32'",
    "keyring>=24; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.5",
    "black>=24",
]

[project.urls]
Homepage = "https://github.com/MoritzV42/secret-paste"
Repository = "https://github.com/MoritzV42/secret-paste"
Issues = "https://github.com/MoritzV42/secret-paste/issues"
Changelog = "https://github.com/MoritzV42/secret-paste/blob/main/CHANGELOG.md"

[project.scripts]
secret-paste = "secret_paste_cli:main"
secret-get = "secret_get_cli:main"
secret-list = "secret_list_cli:main"
secret-revoke = "secret_revoke_cli:main"
secret-paste-install-skill = "secret_paste_install_skill:main"

[tool.setuptools]
py-modules = [
    "secret_paste_core",
    "secret_paste_cli",
    "secret_get_cli",
    "secret_list_cli",
    "secret_revoke_cli",
    "secret_paste_install_skill",
]
packages = ["secret_paste_skill"]

[tool.setuptools.package-data]
secret_paste_skill = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line too long — black handles formatting
    "SIM105",  # contextlib.suppress is overkill for one-line try/except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
